flux/grafana-operator/grafana-redirect/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-to-azure-grafana
  namespace: traefik
spec:
  redirectRegex:
    permanent: true
    regex: ^http(|s)://(.*)altinn.(no|cloud)/monitor(.*)
    replacement: ${EXTERNAL_GRAFANA_URL}${4}
